# RecommenderSystems

./: recommnder-systems.code-workspace
chapter5/: pyproject.toml  pyrightconfig.json  ruff.toml
chapter5/notebook/: UMCF.ipynb
chapter5/src/: association.py  base_recommender.py  bpr.py  fm.py  imf.py  item2vec.py  lda_collaboration.py  lda_content.py  mf.py  nmf.py  popularity.py  random.py  rf.py  svd.py  umcf.py  word2vec.py
chapter5/util/: data_loader.py  metric_calculator.py  models.py
