[project]
name = "recommendersystems"
version = "0.1.0"
description = "Code for Practical Introduction to Recommender Systems(O'Reilly Japan)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "zippowriter", email = "kono_haruhi@cyberagent.co.jp" }]
dependencies = [
  "gensim (>=4.3.3,<5.0.0)",
  "implicit (>=0.7.2,<0.8.0)",
  "jedi (>=0.19.2,<0.20.0)",
  "matplotlib (>=3.10.6,<4.0.0)",
  "mlxtend (>=0.23.4,<0.24.0)",
  "numpy (>=1.18.5,<2.0)",
  "pandas (>=2.3.2,<3.0.0)",
  "scikit-surprise (>=1.1.4,<2.0.0)",
  "tqdm (>=4.67.1,<5.0.0)",
  "wheel (>=0.45.1,<0.46.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
pyright = "^1.1.404"
pytest = "^8.4.1"
ruff = "^0.12.11"
taskipy = "^1.14.1"

[tool.taskipy.tasks]
fmt = { cmd = "ruff format src util", help = "format code" }
lint = { cmd = "task lint_pyright && task lint_ruff", help = "exec lint" }
lint_pyright = "pyright chapter5/src chapter7/src"
lint_ruff = "ruff check chapter5 chapter7"
pr_test = "task lint"
test = { cmd = "pytest chapter7", help = "runs all unit tests" }
